--- a/color.css
+++ b/color.css
@@ -57,7 +57,7 @@ body {
   font-size: 100%;
 }
 
-button {
+button, a {
   border: none;
   background: none;
   text-transform: uppercase;
@@ -73,7 +73,7 @@ button {
   outline: none;
 }
 
-button:hover{
+button:hover, a:hover{
   color: white;
   background: steelblue;
 }
